# osu-mapsync

./: Cargo.toml  pom.xml  tauri.conf.json
src/: file_manager.rs  main.rs  networking.rs  test.rs
src/main/java/org/acdap/osusynchro/: FileManager.java  MainApp.java
src/main/java/org/acdap/osusynchro/network/: NetworkManager.java  NetworkProtocol.java
src/main/java/org/acdap/osusynchro/util/: Beatmap.java  BeatmapSource.java  FileManager.java  LocalBeatmapSource.java  RemoteBeatmapSource.java
src/main/resources/css/: main.css
src/networking/: packets.rs
src/test/java/: FileManagerTest.java
src/test/java/tests/: FileManagerTest.java  NetworkManagerTest.java  NetworkProtocolTest.java  TestUtils.java
src/test/java/testsongs/22374 name - map/: aowi3nor.txt
src/test/java/testsongs/33119 subdirectory/subdirectory/: a.txt
src/test/testsongs/: 404 not a directory.txt
src/test/testsongs/37292 abc 123 - a)141!/: ieieieiei.txt
src/test/testsongs/43701 duplicate - name/: osu.txt
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  Comp.tsx  LocalConnection.tsx  RemoteConnection.tsx  SyncPanel.tsx  types.d.ts
ui/src/components/: SongList.tsx
ui/src/styling/: App.module.css  LocalConnection.module.css  RemoteConnection.module.css  SongList.module.css  SyncPanel.module.css
