[package]
name = "osu-mapsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
data-encoding = "2.3.3"
sha2 = "0.10.6"
thiserror = "1.0.38"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["dialog"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6.3"
walkdir = "2"
tempfile = "3"
cfg-if = "1.0.0"
expect-test = "1.4.0"
mockall = "0.11.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
